--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ body {
 }
 
 .outer {
-    height: 170px;
-    width: 200px;
+    height: 140px;
+    width: 170px;
     border: 5px solid #d19effd1;
     border-radius: 60px 60px 30px 30px;
     padding: 2px;
@@ -38,7 +38,22 @@ body {
     height: 40px;
     width: 25px;
     border-radius: 50%;
-    animation: eyemove 1s infinite;
+    animation: eyemove 5s infinite;
+}
+
+.headset {
+    height: 50px;
+    width: 15px;
+    background-color: black;
+    animation: bodymove 3s infinite; 
+}
+
+.headset1 {
+    border-radius: 10px 0px 0px 10px;
+}
+
+.headset2 {
+    border-radius: 0px 10px 10px 0px;
 }
 
 @keyframes bodymove {
@@ -46,19 +61,48 @@ body {
         transform: translate(0px, 0px);
     }
 
-    /* 25% {
-        transform: translate(0px, 7.5px);
-    } */
-
     50% {
         transform: translate(0px, 15px);
     }
 
-    /* 75% {
-        transform: translate(0px, 7.5px);
-    } */
+    100% {
+        transform: translate(0px, 0px);
+    }
+}
+
+@keyframes eyemove {
+    0% {
+        height: 40px;
+        transform: translate(0px, 0px);
+    }
+
+    10% {
+        height: 3px;
+        transform: translate(0px, 10px);
+    }
+
+    20% {
+        height: 40px;
+        transform: translate(0px, 0px);
+    }
+
+    35% {
+        height: 3px;
+        transform: translate(0px, 0px);
+    }
+
+    40% {
+        height: 20px;
+        transform: translate(0px, 0px);
+    }
+
+    60% {
+        height: 30px;
+        transform: translate(5px, 0px);
+    }
 
     100% {
+        height: 40px;
         transform: translate(0px, 0px);
     }
 }
